--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
    // String javaFxVersion = '17.0.7'
-    String javaFxVersion = '24.0.1'
+    String javaFxVersion = '21.0.2'
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
@@ -44,11 +44,11 @@ test {
 }
 
 application {
-    mainClass.set("broccoli.Broccoli")
+    mainClass.set("broccoli.Launcher")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "broccoli"
     archiveClassifier = null
 }
 
